# customsay

./: .gitignore  Cargo.toml  Custom.md  README.md  setup.ps1  setup.sh
.github/workflows/: release.yml
chocolatey/: yisangsay.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
src/: cli.rs  frames.rs  main.rs
