[package]
name = "customsay"
version = "0.1.0"
edition = "2021"
description = "A customizable CLI program like cowsay - create your own animated ASCII art character from any GIF!"
license = "GPL-3.0"
repository = "https://github.com/VectorSophie/yisangsay-independent"
authors = ["VectorSophie <jay7math@gmail.com>"]

[dependencies]
lazy_static = "1.4"
clap = {version = "~4.4.0", features = ["derive"]}
crossterm = "0.27"
tokio = { version = "~1.35.0", features = ["full"] }

[package.metadata.deb]
maintainer = "VectorSophie <jay7math@gmail.com>"
copyright = "2024, VectorSophie <jay7math@gmail.com>"
extended-description = """\
A customizable CLI tool inspired by cowsay. \
Create your own animated ASCII art character from any GIF! \
Easily convert any GIF into a personalized CLI tool."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/customsay", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/customsay/", "644"],
]
